# running-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202604280001_initial_schema.py  202604290001_hr_zones_calendar_events.py  202604290002_events.py  202604300001_preferences_workout_pool.py  202605110001_elevation_correction.py  202605160001_event_course_data.py  202605170001_event_poster_image.py  202605170002_notifications.py  202605210001_avatar_preferences.py  202605220001_planned_workout_sessions.py  202606040001_demo_account.py  202606060001_report_builder.py  202606060002_route_start_preferences.py
backend/app/: __init__.py  main.py
backend/app/analytics/: elevation.py  intensity.py  load.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  crypto.py  exceptions.py  logging.py  security.py  time.py
backend/app/db/: base.py  cleanup_seed.py  init_db.py  refresh_demo_account.py  seed_dev.py  session.py
backend/app/jobs/: queue.py  scheduler.py  tasks.py  worker.py
backend/app/models/: __init__.py  activity.py  activity_note.py  activity_stream.py  calendar_event.py  event.py  gear.py  heart_rate_zone_set.py  notification.py  planning.py  provider_connection.py  report.py  user.py  user_preference.py  weekly_metric.py
backend/app/providers/: __init__.py
backend/app/schemas/: activity.py  analytics.py  auth.py  event.py  gear.py  notification.py  planning.py  profile.py  provider.py  report.py  route_planning.py
backend/app/services/: activity_service.py  analytics_service.py  auth_service.py  demo_data_service.py  elevation_service.py  event_service.py  export_service.py  gear_service.py  notification_service.py  (+9 more)
(+176 files in other folders)
