[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "running-tracker-backend"
version = "0.1.0"
description = "Personal running tracker backend"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.4",
  "CairoSVG>=2.9.0",
  "cryptography>=48.0.0",
  "fastapi>=0.136.3",
  "httpx>=0.28.1",
  "email-validator>=2.3.0",
  "psycopg[binary]>=3.3.4",
  "pydantic-settings>=2.14.1",
  "python-multipart>=0.0.32",
  "redis>=8.0.0",
  "rq>=2.9.1",
  "sqlalchemy>=2.0.50",
  "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"
